# docsai

./: .gitignore  CLAUDE.md  LICENSE  README.md  docsai_mcp_server.py  pyproject.toml  requirements.txt
docs/: CASE_STUDY_STRIPE.md  PROMPT_ENGINEERING_GUIDE.md  QUALITY_OVER_SPEED.md  ROADMAP.md  THE_STORY.md  USAGE_GUIDE.md
docsai/: __init__.py  config_loader.py  document_intelligence.py  file_parsers.py  incremental_updater.py  ingestion_manager.py  llm_runner.py  llm_runner_supercharged.py  logger.py  main.py  mcp_server.py  profile_ops.py
docsai/guards/: prompts.py  prompts_supercharged.py  validator.py
docsai/retriever/: ingest.py  search.py
profiles/petstore/: config.yaml
profiles/stripe/: config.yaml
profiles/tailwindcss/: config.yaml
scripts/: analyze_stripe_indexing.py  bootstrap_docai.py  bootstrap_ui.py  check_ingestion_status.py  clear_chroma.py  clear_chroma_auto.py  diagnose_rag_quality.py  ingestion_status.py  monitor_ingestion.py  restart_comprehensive_ingestion.py  schedule_ingestion.py
tests/: test_complete_flow.py  test_ingestion.py  test_supercharged_prompts.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  index.css
ui/src/api/: ask.ts  client.ts  ingestion.ts  profiles.ts  types.ts
ui/src/components/chat/: AnswerDisplay.tsx  ChatInput.tsx  ChatMessage.tsx  ChatPanel.tsx  CitationList.tsx  ModeSelector.tsx
ui/src/context/: AppContext.tsx
ui/src/hooks/: useAsk.ts  useHealth.ts  useIngestion.ts  useProfileStats.ts  useProfiles.ts
ui/src/lib/: format.ts  markdown.ts
(+13 files in other folders)
