[project]
name = "docsai"
version = "0.2.0"
description = "Turn any documentation into an AI expert in minutes"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "chromadb",
    "beautifulsoup4",
    "lxml",
    "markdownify",
    "rank-bm25",
    "typer",
    "pyyaml",
    "orjson",
    "requests",
    "sentence-transformers",
    "mcp",
    "rich",
]

[project.scripts]
docsai = "docsai.main:cli"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["docsai*"]

[tool.setuptools.package-data]
docsai = ["*.py"]
